syntax = "proto3";
package lumera.supernode.v1;

option go_package = "x/supernode/v1/types";

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

message SupernodeAccountHistory {
  string account = 1 [(cosmos_proto.scalar) = "cosmos.AccAddressString"]; 
  int64 height = 2; 
}