syntax = "proto3";
package lumera.supernode.v1;

option go_package = "x/supernode/v1/types";

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "lumera/supernode/v1/metrics_aggregate.proto";
import "lumera/supernode/v1/params.proto";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams        (MsgUpdateParams       ) returns (MsgUpdateParamsResponse       );
  rpc RegisterSupernode   (MsgRegisterSupernode  ) returns (MsgRegisterSupernodeResponse  );
  rpc DeregisterSupernode (MsgDeregisterSupernode) returns (MsgDeregisterSupernodeResponse);
  rpc StartSupernode      (MsgStartSupernode     ) returns (MsgStartSupernodeResponse     );
  rpc StopSupernode       (MsgStopSupernode      ) returns (MsgStopSupernodeResponse      );
  rpc UpdateSupernode     (MsgUpdateSupernode    ) returns (MsgUpdateSupernodeResponse    );
  rpc ReportSupernodeMetrics(MsgReportSupernodeMetrics) returns (MsgReportSupernodeMetricsResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                          "authority";
  option           (amino.name) = "lumera/x/supernode/v1/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgRegisterSupernode {
  option (cosmos.msg.v1.signer) = "creator";
  string creator          = 1;
  string validatorAddress = 2;
  string ipAddress        = 3;
  string supernodeAccount = 4;
  string p2p_port         = 5;
}

message MsgRegisterSupernodeResponse {}

message MsgDeregisterSupernode {
  option (cosmos.msg.v1.signer) = "creator";
  string creator          = 1;
  string validatorAddress = 2;
}

message MsgDeregisterSupernodeResponse {}

message MsgStartSupernode {
  option (cosmos.msg.v1.signer) = "creator";
  string creator          = 1;
  string validatorAddress = 2;
}

message MsgStartSupernodeResponse {}

message MsgStopSupernode {
  option (cosmos.msg.v1.signer) = "creator";
  string creator          = 1;
  string validatorAddress = 2;
  string reason           = 3;
}

message MsgStopSupernodeResponse {}

message MsgUpdateSupernode {
  option (cosmos.msg.v1.signer) = "creator";
  string creator          = 1;
  string validatorAddress = 2;
  string ipAddress        = 3;
  string note             = 4;
  string supernodeAccount = 5;
  string p2p_port         = 6;
}

message MsgUpdateSupernodeResponse {}

message MsgReportSupernodeMetrics {
  option (cosmos.msg.v1.signer) = "validator_address";
  option (cosmos.msg.v1.signer) = "supernode_account";

  string validator_address = 1 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  string supernode_account = 2 [(cosmos_proto.scalar) = "cosmos.AccAddressString"];
  MetricsAggregate metrics = 3 [(gogoproto.nullable) = false];
}

message MsgReportSupernodeMetricsResponse {}

